# tclip

./: Cargo.toml  README.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: main.rs
